--- a/styles/anonymous-overflow/catppuccin.user.less
+++ b/styles/anonymous-overflow/catppuccin.user.less
@@ -5,7 +5,7 @@
 @version 2000.01.01
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/anonymous-overflow/catppuccin.user.less
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Aanonymous-overflow
-@description Soothing pastel theme for anonymous-overflow
+@description Soothing pastel theme for Anonymous Overflow
 @author Catppuccin
 @license MIT
 
@@ -50,10 +50,6 @@
                domain("o.iii.st"),
                domain("overflow.canine.tools"),
                domain("overflow.hostux.net") {
-  /* This section applies the light/dark themes automatically based on the user's system theme.
-     Use the below example CSS to start if the website you are theming doesn't have a light/dark mode toggle.
-     For an actual example of this, see https://github.com/catppuccin/userstyles/blob/39288b593278e5efa48007d5fc001292cf910672/styles/brave-search/catppuccin.user.css#L16-L29.
-  */
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
