--- a/styles/anonymous-overflow/catppuccin.user.less
+++ b/styles/anonymous-overflow/catppuccin.user.less
@@ -90,7 +90,17 @@
 
     color-scheme: if(@flavor = latte, light, dark);
 
-    :root {
+    ::selection {
+      background-color: fade(@accent-color, 30%);
+    }
+
+    input,
+    textarea {
+      &::placeholder {
+        color: @subtext0 !important;
+      }
+    }
+
     --code-bg: @crust;
     --code-fg: @text;
     --main-bg: @base;
@@ -99,17 +109,17 @@
     --link-color: @blue;
     --meta-bg: @overlay0;
     --input-bg-hover: @overlay0;
-    }
+    --divider-color: @overlay0;
 
-    .cp, .cpf {
+    .cp, .cpf, .c1 {
       color: @overlay0;
     }
 
-    .k, .kc, .kd, .kp, .kr, .kt {
+    .k, .kc, .kd, .kp, .kr, .kt, .no {
       color: @sky; 
     }
 
-    .na, .nc, .nd, .ne, .nf, .nx {
+    .na, .nc, .nd, .ne, .nf, .nx, .gi {
       color: @green;
     }
 
