--- a/styles/anonymous-overflow/catppuccin.user.less
+++ b/styles/anonymous-overflow/catppuccin.user.less
@@ -98,14 +98,14 @@
     }
 
     --code-bg: @crust;
-    --code-fg: @text;
-    --main-bg: @base;
-    --text-color: @text;
-    --muted-text-color: @subtext0;
-    --link-color: @blue;
-    --meta-bg: @overlay0;
-    --input-bg-hover: @overlay0;
-    --divider-color: @overlay0;
+    --code-fg: @text !important;
+    --main-bg: @base !important;
+    --text-color: @text !important;
+    --muted-text-color: @subtext0 !important;
+    --link-color: @blue !important;
+    --meta-bg: @overlay0 !important;
+    --input-bg-hover: @overlay0 !important;
+    --divider-color: @overlay0 !important;
 
     .cp, .cpf, .c1 {
       color: @overlay0;
