Add proposed changes

--- a/styles/anonymous-overflow/catppuccin.user.less
+++ b/styles/anonymous-overflow/catppuccin.user.less
@@ -50,6 +50,8 @@
                domain("o.iii.st"),
                domain("overflow.canine.tools"),
                domain("overflow.hostux.net") {
+  @import url("https://python.catppuccin.com/pygments/catppuccin-variables.important.css");
+
   :root {
     @media (prefers-color-scheme: light) {
       #catppuccin(@lightFlavor);
@@ -87,6 +89,33 @@
     @mantle: @catppuccin[@@flavor][@mantle];
     @crust: @catppuccin[@@flavor][@crust];
     @accent: @catppuccin[@@flavor][@@accentColor];
+    --ctp-rosewater: @rosewater;
+    --ctp-flamingo: @flamingo;
+    --ctp-pink: @pink;
+    --ctp-mauve: @mauve;
+    --ctp-red: @red;
+    --ctp-maroon: @maroon;
+    --ctp-peach: @peach;
+    --ctp-yellow: @yellow;
+    --ctp-green: @green;
+    --ctp-teal: @teal;
+    --ctp-sky: @sky;
+    --ctp-sapphire: @sapphire;
+    --ctp-blue: @blue;
+    --ctp-lavender: @lavender;
+    --ctp-text: @text;
+    --ctp-subtext1: @subtext1;
+    --ctp-subtext0: @subtext0;
+    --ctp-overlay2: @overlay2;
+    --ctp-overlay1: @overlay1;
+    --ctp-overlay0: @overlay0;
+    --ctp-surface2: @surface2;
+    --ctp-surface1: @surface1;
+    --ctp-surface0: @surface0;
+    --ctp-base: @base;
+    --ctp-mantle: @mantle;
+    --ctp-crust: @crust;
+    
 
     color-scheme: if(@flavor = latte, light, dark);
 
@@ -97,8 +126,6 @@
       }
     }
 
-    --code-bg: @crust;
-    --code-fg: @text !important;
     --main-bg: @base !important;
     --text-color: @text !important;
     --muted-text-color: @subtext0 !important;
@@ -107,36 +134,14 @@
     --input-bg-hover: @overlay0 !important;
     --divider-color: @overlay0 !important;
 
-    .cp, .cpf, .c1 {
-      color: @overlay0;
-    }
-
-    .k, .kc, .kd, .kp, .kr, .kt, .no {
-      color: @sky; 
-    }
-
-    .na, .nc, .nd, .ne, .nf, .nx, .gi {
-      color: @green;
-    }
-
-    .kn, .nt, .o, .ow, .gd {
-      color: @red;
-    }
-
-    .m, .mb, .mf, .mh, .mi, .il, .mo {
-      color: @mauve;
-    }
-
-    .ld, .s, .sa, .sb, .sc, .dl, .sd, .s2, .sh, .si, .sx, .sr, .s1 {
-      color: @yellow;
-    }
-
     .answer-meta.accepted {
       background-color: @teal !important;
       color: @base !important;
     }
   }
 }
+
+/* deno-fmt-ignore */
 
 @catppuccin: {
   @latte:     { @rosewater: #dc8a78; @flamingo: #dd7878; @pink: #ea76cb; @mauve: #8839ef; @red: #d20f39; @maroon: #e64553; @peach: #fe640b; @yellow: #df8e1d; @green: #40a02b; @teal: #179299; @sky: #04a5e5; @sapphire: #209fb5; @blue: #1e66f5; @lavender: #7287fd; @text: #4c4f69; @subtext1: #5c5f77; @subtext0: #6c6f85; @overlay2: #7c7f93; @overlay1: #8c8fa1; @overlay0: #9ca0b0; @surface2: #acb0be; @surface1: #bcc0cc; @surface0: #ccd0da; @base: #eff1f5; @mantle: #e6e9ef; @crust: #dce0e8; };
