--- a/styles/anonymous-overflow/catppuccin.user.less
+++ b/styles/anonymous-overflow/catppuccin.user.less
@@ -135,7 +135,7 @@
     --divider-color: @overlay0 !important;
 
     .answer-meta.accepted {
-      background-color: @teal !important;
+      background-color: @green !important;
       color: @base !important;
     }
   }
