feat(gimkit): style news

--- a/styles/gimkit/catppuccin.user.less
+++ b/styles/gimkit/catppuccin.user.less
@@ -863,6 +863,15 @@
       mask-image: linear-gradient(@base 50%, transparent 100%);
     }
 
+    // News
+    body > div > .ant-modal-root .ant-modal-body > div:first-child {
+      background-color: @accent;
+
+      * {
+        color: @base !important;
+      }
+    }
+
     // Gimloader, because I'm nice and always style the popular extensions
     .lucide-chevron-down {
       stroke: @base !important;
