feat(gimkit): group pricing page

--- a/styles/gimkit/catppuccin.user.less
+++ b/styles/gimkit/catppuccin.user.less
@@ -48,6 +48,10 @@
       border-color: @surface2;
     }
 
+    footer {
+      background-color: @base;
+    }
+
     #mainContainer {
       background-color: @mantle;
 
@@ -244,7 +248,7 @@
       background-color: @base !important;
     }
 
-    .ant-divider {
+    .ant-divider:not(.ant-divider-with-text-center) {
       border-color: @surface1;
     }
 
@@ -342,7 +346,7 @@
       }
     }
 
-    #content > .vc.flex-column {
+    #content > .vc.flex-column:not(:has(img[src="/client/img/svgLogo.svg"])) {
       background-color: @mantle;
 
       .flex-column > div:nth-child(2) {
@@ -442,7 +446,10 @@
         .ant-alert,
         :has(
           img[src="/client/img/svgLogoWhite.svg"], img[src="/client/img/svgLogo.svg"]
-        )
+        ),
+        div[style="height: 20px;"],
+        div[style="height: 40px;"],
+        .ant-divider-with-text-center
       ) {
       background-color: @base;
 
@@ -870,6 +877,34 @@
       * {
         color: @base !important;
       }
+    }
+
+    // Group License Page
+    #content > div > .maxAll > .medium-shadow {
+      background-color: @base;
+    }
+
+    [background] {
+      &[background="#2e7d32"] {
+        background-color: @green;
+      }
+
+      &[background="#311b92"] {
+        background-color: @blue;
+      }
+
+      * {
+        color: @base;
+        opacity: 1 !important;
+      }
+
+      img {
+        filter: @base-filter;
+      }
+    }
+
+    .fa-check-circle {
+      color: @green !important;
     }
 
     // Gimloader, because I'm nice and always style the popular extensions
