feat(gimkit): style privacy policy

--- a/styles/gimkit/catppuccin.user.less
+++ b/styles/gimkit/catppuccin.user.less
@@ -907,6 +907,16 @@
       color: @green !important;
     }
 
+    // Privacy Policy
+    .flex-center:has(> img[src="/client/img/icons/secure.svg"]) > .vc {
+      background-color: @base;
+    }
+
+    div:has(img[src="/client/img/icons/secure.svg"])
+      .flex-column.flex-center.max-width {
+      background-color: @base !important;
+    }
+
     // Gimloader, because I'm nice and always style the popular extensions
     .lucide-chevron-down {
       stroke: @base !important;
