--- a/styles/bilibili/catppuccin.user.less
+++ b/styles/bilibili/catppuccin.user.less
@@ -5,7 +5,7 @@
 @version 2000.01.01
 @updateURL https://github.com/catppuccin/userstyles/raw/main/styles/bilibili/catppuccin.user.less
 @supportURL https://github.com/catppuccin/userstyles/issues?q=is%3Aopen+is%3Aissue+label%3Abilibili
-@description Soothing pastel theme for bilibili
+@description Soothing pastel theme for Bilibili
 @author Catppuccin
 @license MIT
 
