--- a/styles/bilibili/catppuccin.user.less
+++ b/styles/bilibili/catppuccin.user.less
@@ -43,7 +43,7 @@
       --graph_bg_thick: @surface0 !important; /* Active state background | 激活状态背景 */
       --graph_weak: @surface1 !important; /* Button border | 按钮边框 */
       --brand_blue: @mauve !important; /* Brand blue to purple | 品牌蓝色改为紫色 */
-      --brand_blue_rgb: 203, 166, 247 !important; /* Purple RGB value (Catppuccin Mauve) | 紫色RGB值 (Catppuccin Mauve) */
+      --brand_blue_rgb: #lib.rgbify(@mauve) [] !important; /* Purple RGB value (Catppuccin Mauve) | 紫色RGB值 (Catppuccin Mauve) */
       --bili-comment-tag-bg-light: @surface1 !important;
       --bili-comment-tag-color-light: @text !important;
     }
