--- a/styles/bilibili/catppuccin.user.less
+++ b/styles/bilibili/catppuccin.user.less
@@ -51,7 +51,7 @@
     body {
       background-color: @base;
 
-      & > div {
+      > div {
         color: @text;
         background-color: @surface0;
       }
