fix(toyhouse): navbar title color

--- a/styles/toyhouse/catppuccin.user.less
+++ b/styles/toyhouse/catppuccin.user.less
@@ -344,6 +344,11 @@
           border-top-color: transparent;
         }
       }
+      .navbar-inverse .navbar-brand, .navbar-inverse .navbar-toggler {
+        &, &:focus, &:hover {
+          color: @text;
+        }
+      }
     }
 
     .site-wrapper {
