fix(toyhouse): modal menu borders

--- a/styles/toyhouse/catppuccin.user.less
+++ b/styles/toyhouse/catppuccin.user.less
@@ -349,6 +349,12 @@
           color: @text;
         }
       }
+      .modal-header {
+        border-bottom-color: @surface2;
+      }
+      .modal-footer {
+        border-top-color: @surface2;
+      }
     }
 
     .site-wrapper {
