fix(mdbook): add more mdbooks

--- a/styles/mdbook/catppuccin.user.less
+++ b/styles/mdbook/catppuccin.user.less
@@ -17,9 +17,14 @@
 
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
-@-moz-document url-prefix("https://rust-lang.github.io/mdBook/"),
+@-moz-document domain("rust-lang.github.io"),
   domain("doc.rust-lang.org"),
-  domain("rust-book.cs.brown.edu") {
+  domain("rust-book.cs.brown.edu"),
+  domain("rustc-dev-guide.rust-lang.org"),
+  domain("forge.rust-lang.org"),
+  domain("lang-team.rust-lang.org"),
+  domain("doc.redox-os.org"),
+  url-prefix("https://lukaswirth.dev/tlborm/") {
   @import url("https://unpkg.com/@catppuccin/highlightjs@1.0.0/css/catppuccin-variables.css");
 
   :root {
