feat(gimkit): style help center

--- a/styles/gimkit/catppuccin.user.less
+++ b/styles/gimkit/catppuccin.user.less
@@ -18,7 +18,7 @@
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
 @-moz-document regexp(
-    "^(https?:\/\/)?(www\.)?gimkit\.com(\/(?!host|join).*)?$"
+    "^(https?:\/\/)?(.*\.)?gimkit\.com(\/(?!host|join).*)?$"
   ) {
   :root {
     @media (prefers-color-scheme: light) {
@@ -915,6 +915,144 @@
     div:has(img[src="/client/img/icons/secure.svg"])
       .flex-column.flex-center.max-width {
       background-color: @base !important;
+    }
+
+    // Help Center
+    .csh-theme-background-color-light {
+      background-color: @mantle;
+    }
+
+    .csh-aside-spaced {
+      color: @text !important;
+    }
+
+    .csh-header-main-logo img {
+      filter: @base-filter;
+    }
+
+    .csh-theme-background-color-default {
+      background-color: @accent;
+    }
+
+    header[role="banner"]::after {
+      display: none; // Gradient doesn't really fit here.
+    }
+
+    .csh-article-content {
+      background-color: @base;
+      border-color: @surface2 !important;
+    }
+
+    .csh-header-main-actions-website {
+      background-color: @base !important;
+    }
+
+    .csh-navigation-back {
+      color: @text !important;
+
+      &::before {
+        filter: @text-filter;
+      }
+    }
+
+    [style="background-color: #673ab7;"] {
+      background-color: @accent !important;
+      color: @base;
+    }
+
+    [style*="color:#000000;"],
+    .csh-article-content-updated,
+    h1,
+    .csh-article-rate-title,
+    .csh-navigation-title-list-subject-label,
+    .csh-markdown-image::after {
+      color: @text !important;
+    }
+
+    .csh-markdown-line,
+    .csh-navigation-title-list-separator,
+    .csh-category-item-meta-separator {
+      background-color: @surface2 !important;
+    }
+
+    .csh-footer-copyright-separated > .csh-wrapper {
+      border-color: @surface2 !important;
+    }
+
+    .csh-button-grey {
+      background-color: @accent;
+      color: @base !important;
+      border-color: @accent;
+    }
+
+    .csh-markdown-emphasis[data-type="|||"] {
+      background-color: @yellow !important;
+      border-color: darken(@yellow, 20%) !important;
+
+      span {
+        color: @base;
+      }
+    }
+
+    nav {
+      background-color: @mantle;
+      border-color: @surface2;
+    }
+
+    .csh-aside-single-line {
+      &[data-active="true"], &:hover {
+        background-color: @base;
+      }
+    }
+
+    .csh-box {
+      background-color: @base;
+
+      * {
+        color: @text !important;
+      }
+    }
+
+    .csh-popularity-bar[data-active="false"] {
+      background-color: @overlay0;
+    }
+
+    .csh-category-badge {
+      background-color: @accent !important;
+      color: @base !important;
+    }
+
+    .csh-header-title {
+      color: @base !important;
+    }
+
+    .csh-header-search::before {
+      background-color: @text !important;
+      opacity: 1 !important;
+    }
+
+    .csh-include-search {
+      background-color: @base !important;
+
+      * {
+        color: @text !important;
+      }
+    }
+
+    .csh-markdown-list-item::before {
+      background-color: @text !important;
+    }
+
+    .csh-markdown-title {
+      border-color: @accent !important;
+    }
+
+    .csh-article-content-header, .csh-category-section {
+      border-color: @surface2 !important;
+    }
+
+    .csh-include-search-result[data-active="true"] {
+      background-color: @mantle !important;
     }
 
     // Gimloader, because I'm nice and always style the popular extensions
