fix(gimkit): don't style forum site

--- a/styles/gimkit/catppuccin.user.less
+++ b/styles/gimkit/catppuccin.user.less
@@ -18,7 +18,7 @@
 @import "https://userstyles.catppuccin.com/lib/lib.less";
 
 @-moz-document regexp(
-    "^(https?:\/\/)?(.*\.)?gimkit\.com(\/(?!host|join).*)?$"
+    "^(https?:\/\/)?((help|www)\.)?gimkit\.com(\/(?!host|join).*)?$"
   ) {
   :root {
     @media (prefers-color-scheme: light) {
