feat(gimkit): style home page

--- a/styles/gimkit/catppuccin.user.less
+++ b/styles/gimkit/catppuccin.user.less
@@ -907,6 +907,18 @@
       color: @green !important;
     }
 
+    // Home
+    .maxWidth:has(> div > img[src="/client/img/home/left.png"]) > .flex-column {
+      background-color: @base;
+      border-color: @surface0 !important;
+    }
+
+    .flex-center:has(.maxWidth > div > img[src="/client/img/home/left.png"])
+      > .flex-center
+      > .maxWidth {
+      background-color: @base;
+    }
+
     // Privacy Policy
     .flex-center:has(> img[src="/client/img/icons/secure.svg"]) > .vc {
       background-color: @base;
