feat(gimkit): style login/signup pages

--- a/styles/gimkit/catppuccin.user.less
+++ b/styles/gimkit/catppuccin.user.less
@@ -929,6 +929,28 @@
       background-color: @base !important;
     }
 
+    // Login/Signup
+    div:has(> .scroll-y img[src="/client/img/signup/google.svg"]) {
+      background-image: none;
+
+      > .scroll-y {
+        background-color: @base;
+      }
+    }
+
+    .ant-alert-error {
+      background-color: @red;
+      border-color: @red !important;
+
+      .ant-alert-message, .ant-alert-description {
+        color: @base;
+      }
+
+      .anticon-close-circle svg {
+        fill: @base !important;
+      }
+    }
+
     // Help Center
     .csh-theme-background-color-light {
       background-color: @mantle;
