fix: remove use of * selector in backLava styling

--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -112,7 +112,7 @@
     .backLava {
       background: @surface0 !important;
       border-radius: 6px;
-      * {
+      .leftLava, .bottomLava, .cornerLava {
         background: none !important;
       }
     }
