feat: style footer divider

--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -435,6 +435,10 @@
         filter: invert(1);
       }
     }
+    
+    #footer {
+      border-top-color: @surface2;
+    }
 
     // https://github.com/bajrangCoder/acode-catppuccin
     .ace_editor {
