--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -207,6 +207,11 @@
     ins[style*="background:#80ff80"] {
       background: fade(@green, 70%) !important;
     }
+    
+    span[style*="color:green"],
+    span[style*="color: green"] {
+      color: @green !important;
+    }
 
     .roundbox {
       background: @mantle;
@@ -264,9 +269,6 @@
     span.commentRating {
       span {
         color: var(--muted-color) !important;
-      }
-      span[style*="green"] {
-        color: @green !important;
       }
     }
 
